[package]
name = "math"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "*"
pest_derive = "*"
minifb = "*"

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
default_features = false
features = ["ttf"]

[dependencies.plotters-bitmap]
default_features = false
git = "https://github.com/plotters-rs/plotters"